--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>会員</title>
     <link rel="stylesheet" href="stylesheet2.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet2">
+    <style>
+    input[type"submit"]{
+      border-radius: 6px;
+    }
+    </style>
   </head>
   <body>
 
@@ -16,9 +21,14 @@
       <div class="kaiin">
         <p>会員番号</p>
         <input>
-        <p>パスワード</p>
-        <input>
+        <p>
+          <label for="pw-field">パスワード</label>
+        </p>
+        <input type="password" name="pw" id="pw-field">
       </div>
+        <p>
+          <input class="sousin" type"submit" value="送信する">
+        </p>
       <span>会員番号・パスワードを忘れた方はこちら</span>
     </div>
     <fotter></fotter>
